tests/models/enum/unnamed/i8/fail/default.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(default = 1.0)]
        i8
    ),
}
fn main() {}
