tests/models/enum/unnamed/i8/fail/default.stderr
error[E0308]: `?` operator has incompatible types
 --> tests/models/enum/unnamed/i8/fail/default.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^ expected `i8`, found floating-point number
  |
  = note: `?` operator cannot convert from `{float}` to `i8`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
